--- a/Emby.AutoOrganize/Configuration/autoorganizesmart.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizesmart.html
@@ -1,4 +1,4 @@
-﻿<div id="libraryFileOrganizerSmartMatchPage" data-role="page" class="page type-interior organizePage withTabs" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize">
+﻿<div id="libraryFileOrganizerSmartMatchPage" data-role="page" class="page type-interior pluginConfigurationPage withTabs" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize" data-controller="__plugin/AutoOrganizeSmartJs">
 
     <div>
         <div class="content-primary">
