added filename replacement option

--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -123,6 +123,11 @@
                                     <td>%ext</td>
                                     <td>mkv</td>
                                 </tr>
+                                <tr>
+                                    <td>Original File Name</td>
+                                    <td>%fn</td>
+                                    <td>filename.mkv</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
