--- a/Emby.AutoOrganize/Configuration/autoorganizelog.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizelog.html
@@ -8,7 +8,7 @@
                     <button is="emby-button" type="button" class="btnClearLog raised button-cancel">
                         <i class="md-icon">clear_all</i><span>${ButtonClear}</span>
                     </button>
-                    <button is="emby-button" type="button" class="btnOrganize raised button-cancel"><i class="md-icon">check</i><span>${ButtonOrganize}</span></button>
+                    <button is="emby-button" type="button" class="btnOrganize raised button-cancel"><i class="md-icon">check</i><span>Organize</span></button>
                     <progress max="100" min="0" style="width: 100px;" class="organizeProgress"></progress>
                 </div>
                 <div class="listTopPaging">
@@ -19,9 +19,9 @@
                         <thead>
                             <tr style="text-align: left;">
                                 <th class="detailTableHeaderCell" data-priority="1"></th>
-                                <th class="detailTableHeaderCell" data-priority="2">${HeaderDate}</th>
-                                <th class="detailTableHeaderCell" data-priority="1">${HeaderSource}</th>
-                                <th class="detailTableHeaderCell" data-priority="3">${HeaderDestination}</th>
+                                <th class="detailTableHeaderCell" data-priority="2">Date</th>
+                                <th class="detailTableHeaderCell" data-priority="1">Source</th>
+                                <th class="detailTableHeaderCell" data-priority="3">Destination</th>
                                 <th class="detailTableHeaderCell" data-priority="1"></th>
                             </tr>
                         </thead>
@@ -31,11 +31,11 @@
                 <br />
                 <div style="text-align: right; vertical-align: middle;" class="legend">
                     <div style="display: inline-block; height: 10px; width: 10px; background: green; margin-right: 1px;"></div>
-                    <span>${LabelCompleted}</span>
+                    <span>Completed</span>
                     <div style="display: inline-block; height: 10px; width: 10px; background: red; margin-left: 1em; margin-right: 1px;"></div>
-                    <span>${LabelFailed}</span>
+                    <span>Failed</span>
                     <div style="display: inline-block; height: 10px; width: 10px; background: blue; margin-left: 1em; margin-right: 1px;"></div>
-                    <span>${LabelSkipped}</span>
+                    <span>Skipped</span>
                 </div>
                 <div class="listBottomPaging">
                 </div>
