--- a/Emby.AutoOrganize/Configuration/autoorganizesmart.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizesmart.html
@@ -4,7 +4,7 @@
         <div class="content-primary">
 
             <div class="readOnlyContent">
-                <p>${TabSmartMatchInfo}</p>
+                <p>Smart Matches</p>
                 <div class="divMatchInfos"></div>
             </div>
         </div>
