--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -4,122 +4,120 @@
 
             <form class="libraryFileOrganizerForm">
 
-                <p>${AutoOrganizeHelp}</p>
-
                 <div>
                     <label class="checkboxContainer">
                         <input type="checkbox" is="emby-checkbox" id="chkEnableTvSorting" />
-                        <span>${OptionEnableEpisodeOrganization}</span>
+                        <span>Enable auto-organize for episodes</span>
                     </label>
                 </div>
                 <div class="inputContainer">
                     <div style="display:flex; align-items:center;">
                         <div style="flex-grow:1;">
-                            <input is="emby-input" id="txtWatchFolder" type="text" label="${LabelWatchFolder}" />
-                            <div class="fieldDescription">${LabelWatchFolderHelp}</div>
+                            <input is="emby-input" id="txtWatchFolder" type="text" label="Watch folder:" />
+                            <div class="fieldDescription">This folder will be monitored for new episodes.</div>
                         </div>
-                        <button type="button" is="paper-icon-button-light" id="btnSelectWatchFolder" title="${ButtonSelectDirectory}" class="autoSize"><i class="md-icon">search</i></button>
+                        <button type="button" is="paper-icon-button-light" id="btnSelectWatchFolder" title="Select directory" class="autoSize"><i class="md-icon">search</i></button>
                     </div>
                 </div>
                 <div class="inputContainer">
-                    <input is="emby-input" id="txtMinFileSize" type="number" label="${LabelMinFileSizeForOrganize}" pattern="[0-9]*" min="0" required />
-                    <div class="fieldDescription">${LabelMinFileSizeForOrganizeHelp}</div>
+                    <input is="emby-input" id="txtMinFileSize" type="number" label="Min file size:" pattern="[0-9]*" min="0" required />
+                    <div class="fieldDescription">Files smaller than this will be ignored.</div>
                 </div>
                 <div class="inputContainer">
-                    <input is="emby-input" id="txtSeasonFolderPattern" type="text" label="${LabelSeasonFolderPattern}" required />
+                    <input is="emby-input" id="txtSeasonFolderPattern" type="text" label="Season folder pattern:" required />
                     <div class="fieldDescription seasonFolderFieldDescription"></div>
                 </div>
                 <div class="inputContainer">
-                    <input is="emby-input" id="txtSeasonZeroName" type="text" label="${LabelSeasonZeroFolderName}" required />
+                    <input is="emby-input" id="txtSeasonZeroName" type="text" label="Season zero folder name:" required />
                     <div class="fieldDescription"></div>
                 </div>
 
-                <div is="emby-collapse" title="${HeaderEpisodeFilePattern}">
+                <div is="emby-collapse" title="Episode file pattern">
                     <div class="collapseContent">
                         <br />
                         <div class="inputContainer">
-                            <input is="emby-input" id="txtEpisodePattern" type="text" label="${LabelEpisodePattern}" required />
+                            <input is="emby-input" id="txtEpisodePattern" type="text" label="Episode pattern:" required />
                             <div class="fieldDescription episodePatternDescription"></div>
                         </div>
                         <div class="inputContainer">
-                            <input is="emby-input" id="txtMultiEpisodePattern" type="text" label="${LabelMultiEpisodePattern}" required />
+                            <input is="emby-input" id="txtMultiEpisodePattern" type="text" label="Mutli-episode pattern:" required />
                             <div class="fieldDescription multiEpisodePatternDescription"></div>
                         </div>
 
                         <br />
-                        <p>${HeaderSupportedPatterns}</p>
+                        <p>Supported Patterns</p>
 
                         <table id="movie-table" class="ui-responsive">
                             <thead>
                                 <tr>
-                                    <th>${HeaderTerm}</th>
-                                    <th>${HeaderPattern}</th>
-                                    <th>${HeaderResult}</th>
+                                    <th>Term</th>
+                                    <th>Pattern</th>
+                                    <th>Result</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>${LabelSeriesNamePlain}</td>
+                                    <td>Series name</td>
                                     <td>%sn</td>
-                                    <td>${LabelSeriesNamePlain}</td>
+                                    <td>Series name</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelSeriesNamePlain}</td>
+                                    <td>Series name</td>
                                     <td>%s.n</td>
-                                    <td>${ValueSeriesNamePeriod}</td>
+                                    <td>Series.name</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelSeriesNamePlain}</td>
+                                    <td>Series name</td>
                                     <td>%s_n</td>
-                                    <td>${ValueSeriesNameUnderscore}</td>
+                                    <td>Series_name</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelSeasonNumberPlain}</td>
+                                    <td>Season number</td>
                                     <td>%s</td>
                                     <td>1</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelSeasonNumberPlain}</td>
+                                    <td>Season number</td>
                                     <td>%0s</td>
                                     <td>01</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEpisodeNumberPlain}</td>
+                                    <td>Episode number</td>
                                     <td>%e</td>
                                     <td>4</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEpisodeNumberPlain}</td>
+                                    <td>Episode number</td>
                                     <td>%0e</td>
                                     <td>04</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEndingEpisodeNumberPlain}</td>
+                                    <td>Ending episode number</td>
                                     <td>%ed</td>
                                     <td>5</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEndingEpisodeNumberPlain}</td>
+                                    <td>Ending episode number</td>
                                     <td>%0ed</td>
                                     <td>05</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEpisodeNamePlain}</td>
+                                    <td>Episode name</td>
                                     <td>%en</td>
-                                    <td>${LabelEpisodeNamePlain}</td>
+                                    <td>Episode name</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEpisodeNamePlain}</td>
+                                    <td>Episode name</td>
                                     <td>%e.n</td>
-                                    <td>${ValueEpisodeNamePeriod}</td>
+                                    <td>Episode.name</td>
                                 </tr>
                                 <tr>
-                                    <td>${LabelEpisodeNamePlain}</td>
+                                    <td>Episode name</td>
                                     <td>%e_n</td>
-                                    <td>${ValueEpisodeNameUnderscore}</td>
+                                    <td>Episode_name</td>
                                 </tr>
                                 <tr>
-                                    <td>${FileExtension}</td>
+                                    <td>File extension</td>
                                     <td>%ext</td>
                                     <td>mkv</td>
                                 </tr>
@@ -135,31 +133,31 @@
 
                 <br /><br />
                 <div class="selectContainer">
-                    <select is="emby-select" id="copyOrMoveFile" label="${LabelTransferMethod}">
-                        <option value="true">${OptionCopy}</option>
-                        <option value="false">${OptionMove}</option>
+                    <select is="emby-select" id="copyOrMoveFile" label="Transfer method:">
+                        <option value="true">Copy</option>
+                        <option value="false">Move</option>
                     </select>
-                    <div class="fieldDescription editorfieldDescription">${LabelTransferMethodHelp}</div>
+                    <div class="fieldDescription editorfieldDescription">Copy or move files from the watch folder</div>
                 </div>
                 <div>
                     <label class="checkboxContainer">
                         <input type="checkbox" is="emby-checkbox" id="chkOverwriteExistingEpisodes" />
-                        <span>${OptionOverwriteExistingEpisodes}</span>
+                        <span>Overwrite existing episodes</span>
                     </label>
                 </div>
                 <div class="inputContainer">
-                    <input is="emby-input" id="txtDeleteLeftOverFiles" type="text" label="${LabelDeleteLeftOverFiles}" />
-                    <div class="fieldDescription">${LabelDeleteLeftOverFilesHelp}</div>
+                    <input is="emby-input" id="txtDeleteLeftOverFiles" type="text" label="Delete left over files" />
+                    <div class="fieldDescription">&nbsp;</div>
                 </div>
                 <div class="checkboxContainer checkboxContainer-withDescription">
                     <label>
                         <input type="checkbox" is="emby-checkbox" id="chkDeleteEmptyFolders" />
-                        <span>${LabelDeleteEmptyFolders}</span>
+                        <span>Delete empty folders</span>
                     </label>
-                    <div class="fieldDescription checkboxFieldDescription">${LabelDeleteEmptyFoldersHelp}</div>
+                    <div class="fieldDescription checkboxFieldDescription">Empty folders will be deleted</div>
                 </div>
                 <div>
-                    <button is="emby-button" type="submit" class="raised button-submit block"><span>${ButtonSave}</span></button>
+                    <button is="emby-button" type="submit" class="raised button-submit block"><span>Save</span></button>
                 </div>
             </form>
 
