Auto detect Series

--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -156,6 +156,15 @@
                     </label>
                     <div class="fieldDescription checkboxFieldDescription">Empty folders will be deleted</div>
                 </div>
+                <div class="checkboxContainer">
+                    <label>
+                        <input type="checkbox" is="emby-checkbox" id="chkEnableSeriesAutoDetect" />
+                        <span>Enable auto-detect for Series</span>
+                    </label>
+                </div>
+                <div class="fldSelectSeriesFolder hide selectContainer">
+                    <select id="selectSeriesFolder" is="emby-select" label="Series library:"></select>
+                </div>
                 <div>
                     <button is="emby-button" type="submit" class="raised button-submit block"><span>Save</span></button>
                 </div>
