TV Series folder pattern

--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -32,6 +32,56 @@
                     <div class="fieldDescription"></div>
                 </div>
 
+                <div is="emby-collapse" title="Series directory pattern">
+                    <div class="collapseContent">
+                        <br />
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtSeriesPattern" type="text" label="Series pattern:" required />
+                            <div class="fieldDescription seriesPatternDescription"></div>
+                        </div>
+
+                        <br />
+                        <p>Supported Patterns</p>
+
+                        <table id="series-table" class="ui-responsive">
+                            <thead>
+                                <tr>
+                                    <th>Term</th>
+                                    <th>Pattern</th>
+                                    <th>Result</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Series name</td>
+                                    <td>%sn</td>
+                                    <td>Series name</td>
+                                </tr>
+                                <tr>
+                                    <td>Series name</td>
+                                    <td>%s.n</td>
+                                    <td>Series.name</td>
+                                </tr>
+                                <tr>
+                                    <td>Series name</td>
+                                    <td>%s_n</td>
+                                    <td>Series_name</td>
+                                </tr>
+                                <tr>
+                                    <td>Series year</td>
+                                    <td>%sy</td>
+                                    <td>2017</td>
+                                </tr>
+                                <tr>
+                                    <td>Original Directory Path</td>
+                                    <td>%fn</td>
+                                    <td>Series name (2017)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
                 <div is="emby-collapse" title="Episode file pattern">
                     <div class="collapseContent">
                         <br />
@@ -47,7 +97,7 @@
                         <br />
                         <p>Supported Patterns</p>
 
-                        <table id="movie-table" class="ui-responsive">
+                        <table id="episode-table" class="ui-responsive">
                             <thead>
                                 <tr>
                                     <th>Term</th>
