--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -174,7 +174,7 @@
                                 <tr>
                                     <td>Original File Name</td>
                                     <td>%fn</td>
-                                    <td>filename.mkv</td>
+                                    <td>filename</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -206,14 +206,15 @@
                     </label>
                     <div class="fieldDescription checkboxFieldDescription">Empty folders will be deleted</div>
                 </div>
-                <div class="checkboxContainer">
+                <div class="checkboxContainer checkboxContainer-withDescription">
                     <label>
                         <input type="checkbox" is="emby-checkbox" id="chkEnableSeriesAutoDetect" />
                         <span>Enable auto-detect for Series</span>
                     </label>
+                    <div class="fieldDescription checkboxFieldDescription">Warning Beta feature, Use with caution, this may cause significantly longer scans and false identification</div>
                 </div>
                 <div class="fldSelectSeriesFolder hide selectContainer">
-                    <select id="selectSeriesFolder" is="emby-select" label="Series library:"></select>
+                    <select id="selectSeriesFolder" is="emby-select" label="Default Series library:"></select>
                 </div>
                 <div>
                     <button is="emby-button" type="submit" class="raised button-submit block"><span>Save</span></button>
