--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -208,6 +208,13 @@
                 </div>
                 <div class="checkboxContainer checkboxContainer-withDescription">
                     <label>
+                        <input type="checkbox" is="emby-checkbox" id="chkQueueLibScan" />
+                        <span>Queue library scan on completion</span>
+                    </label>
+                    <div class="fieldDescription checkboxFieldDescription">Queue a library scan on comlpetion, if setted in movies and TV Shows, the library scan will be triggered once</div>
+                </div>
+                <div class="checkboxContainer checkboxContainer-withDescription">
+                    <label>
                         <input type="checkbox" is="emby-checkbox" id="chkEnableSeriesAutoDetect" />
                         <span>Enable auto-detect for Series</span>
                     </label>
