Clear completed button

--- a/Emby.AutoOrganize/Configuration/autoorganizelog.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizelog.html
@@ -5,6 +5,9 @@
 
             <div>
                 <div style="text-align: right;" class="organizeTaskPanel hide">
+                    <button is="emby-button" type="button" class="btnClearCompleted raised button-cancel">
+                        <i class="md-icon">clear_all</i><span>Clear Completed</span>
+                    </button>
                     <button is="emby-button" type="button" class="btnClearLog raised button-cancel">
                         <i class="md-icon">clear_all</i><span>${ButtonClear}</span>
                     </button>
